[gd_scene load_steps=53 format=2]

[ext_resource path="res://Source/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/BaksoSapi.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/FinalModels/knight.tscn" type="PackedScene" id=3]
[ext_resource path="res://character/music-player/music-player.tscn" type="PackedScene" id=4]
[ext_resource path="res://HACK/griefer-HACK.tscn" type="PackedScene" id=5]
[ext_resource path="res://HACK/golfer-HACK.tscn" type="PackedScene" id=6]
[ext_resource path="res://HACK/golf-ball-HACK.tscn" type="PackedScene" id=7]
[ext_resource path="res://HACK/zap-trap-HACK.tscn" type="PackedScene" id=8]
[ext_resource path="res://score/score.tscn" type="PackedScene" id=9]
[ext_resource path="res://health/health.tscn" type="PackedScene" id=10]
[ext_resource path="res://HACK/sounds.tscn" type="PackedScene" id=11]
[ext_resource path="res://character/golfer/ouch/ow-0.ogg" type="AudioStream" id=12]
[ext_resource path="res://character/golfer/ouch/ow-4.ogg" type="AudioStream" id=13]
[ext_resource path="res://character/griefer/giggle/giggle-0.ogg" type="AudioStream" id=14]
[ext_resource path="res://character/griefer/giggle/giggle-1.ogg" type="AudioStream" id=15]
[ext_resource path="res://character/griefer/giggle/giggle-2.ogg" type="AudioStream" id=16]
[ext_resource path="res://character/griefer/giggle/giggle-3.ogg" type="AudioStream" id=17]
[ext_resource path="res://character/griefer/giggle/giggle-5.ogg" type="AudioStream" id=18]
[ext_resource path="res://character/golfer/ouch/ow-3.ogg" type="AudioStream" id=19]
[ext_resource path="res://character/griefer/giggle/giggle-4.ogg" type="AudioStream" id=20]
[ext_resource path="res://character/golfer/big-laugh/big-laugh-1.ogg" type="AudioStream" id=21]
[ext_resource path="res://character/golfer/big-laugh/big-laugh-2.ogg" type="AudioStream" id=22]
[ext_resource path="res://character/golfer/big-laugh/big-laugh-0.ogg" type="AudioStream" id=23]
[ext_resource path="res://character/golfer/ouch/ow-1.ogg" type="AudioStream" id=24]
[ext_resource path="res://character/golfer/big-laugh/big-laugh-3.ogg" type="AudioStream" id=25]
[ext_resource path="res://character/golfer/big-laugh/big-laugh-4.ogg" type="AudioStream" id=26]
[ext_resource path="res://character/golfer/big-laugh/big-laugh-5.ogg" type="AudioStream" id=27]
[ext_resource path="res://character/golfer/ouch/ow-2.ogg" type="AudioStream" id=28]
[ext_resource path="res://character/griefer/scream/long-scream-0.ogg" type="AudioStream" id=29]
[ext_resource path="res://character/griefer/scream/long-scream-1.ogg" type="AudioStream" id=30]
[ext_resource path="res://character/griefer/scream/scream-1.ogg" type="AudioStream" id=31]
[ext_resource path="res://character/griefer/scream/scream-4.ogg" type="AudioStream" id=32]
[ext_resource path="res://misc/jeer.ogg" type="AudioStream" id=33]
[ext_resource path="res://misc/first-call.ogg" type="AudioStream" id=34]
[ext_resource path="res://misc/cheer.ogg" type="AudioStream" id=35]
[ext_resource path="res://character/griefer/scream/scream-3.ogg" type="AudioStream" id=36]
[ext_resource path="res://character/griefer/scream/scream-5.ogg" type="AudioStream" id=37]
[ext_resource path="res://character/griefer/scream/scream-2.ogg" type="AudioStream" id=38]
[ext_resource path="res://misc/countdown.ogg" type="AudioStream" id=39]
[ext_resource path="res://character/griefer/scream/scream-7.ogg" type="AudioStream" id=40]
[ext_resource path="res://character/griefer/scream/scream-6.ogg" type="AudioStream" id=41]
[ext_resource path="res://character/griefer/scream/scream-0.ogg" type="AudioStream" id=42]
[ext_resource path="res://HACK/sounds.gd" type="Script" id=43]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5

[sub_resource type="SpatialMaterial" id=2]

[sub_resource type="CapsuleShape" id=3]
radius = 0.504885

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.4, 0.1, 0.4 )

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="QuadMesh" id=6]
size = Vector2( 1.5, 0.5 )

[sub_resource type="ViewportTexture" id=7]
viewport_path = NodePath("Name/Viewport")

[sub_resource type="SpatialMaterial" id=8]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_albedo_tex_force_srgb = true
albedo_texture = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 36
font_data = ExtResource( 2 )

[node name="Player" type="KinematicBody"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="Model" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 1.01237, 0, 0, 0, -1.63737e-07, -1.00501, 0, 0.818492, -1.3335e-07, 0, 0.0275577, 0 )
shape = SubResource( 3 )

[node name="Feet" type="CollisionShape" parent="."]
transform = Transform( 1.01237, 0, 0, 0, 0.926505, 0, 0, 0, 0.818492, 0, -0.811046, 0 )
shape = SubResource( 4 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.539064, -0.0413517 )

[node name="Camera" type="Camera" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.427318, -0.110549 )
far = 512.0

[node name="Name" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.319, 0 )

[node name="Viewport" type="Viewport" parent="Name"]
size = Vector2( 200, 60 )
transparent_bg = true
hdr = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="GUI" type="Control" parent="Name/Viewport"]
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
mouse_filter = 1

[node name="Player" type="Label" parent="Name/Viewport/GUI"]
margin_right = 20.0
margin_bottom = 1.0
rect_min_size = Vector2( 280, 60 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "asdf"
valign = 1

[node name="Back" type="MeshInstance" parent="Name"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.323762, 0, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 8 )

[node name="Front" type="MeshInstance" parent="Name"]
transform = Transform( -1, 3.25841e-07, 0, 3.25841e-07, 1, 3.25841e-07, 1.06173e-13, 3.25841e-07, -1, -0.293591, 0, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 8 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Panel" type="ColorRect" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 200 )
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -181.0
margin_top = 29.9282
margin_right = 181.0
margin_bottom = 73.9282
grow_horizontal = 2
custom_fonts/font = SubResource( 9 )
text = "Quit to main menu"
align = 1
valign = 1

[node name="cancel_button" type="Button" parent="HUD/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -166.505
margin_top = -79.9283
margin_right = -18.5055
margin_bottom = -29.9283
custom_fonts/font = SubResource( 9 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit_button" type="Button" parent="HUD/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 15.7846
margin_top = -79.9283
margin_right = 163.785
margin_bottom = -29.9283
custom_fonts/font = SubResource( 9 )
text = "Quit"

[node name="Players" type="ColorRect" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 600, 400 )
mouse_filter = 2
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Players"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -181.0
margin_top = 15.6085
margin_right = 181.0
margin_bottom = 59.6085
grow_horizontal = 2
custom_fonts/font = SubResource( 9 )
text = "Players"
align = 1
valign = 1

[node name="List" type="ItemList" parent="HUD/Players"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -325.776
margin_right = 250.0
margin_bottom = -25.7755
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 500, 300 )
mouse_filter = 2
custom_fonts/font = SubResource( 9 )

[node name="knight" parent="." instance=ExtResource( 3 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, -1, 0 )

[node name="music-player" parent="." instance=ExtResource( 4 )]
playing = false
current_song = 2

[node name="golfer-HACK" parent="." instance=ExtResource( 6 )]

[node name="griefer-HACK" parent="." instance=ExtResource( 5 )]

[node name="golf-ball-HACK" parent="." instance=ExtResource( 7 )]

[node name="zap-trap-HACK" parent="." instance=ExtResource( 8 )]

[node name="health" parent="." instance=ExtResource( 10 )]

[node name="score" parent="." instance=ExtResource( 9 )]

[node name="sounds" type="Spatial" parent="." instance=ExtResource( 11 )]
script = ExtResource( 43 )
hurt_sounds = [ ExtResource( 12 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 19 ), ExtResource( 13 ) ]
heal_sounds = [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 18 ) ]
score_sounds = [ ExtResource( 23 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ) ]
loss_sounds = [ ExtResource( 33 ) ]
death_sounds = [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 42 ), ExtResource( 31 ), ExtResource( 38 ), ExtResource( 36 ), ExtResource( 32 ), ExtResource( 37 ), ExtResource( 41 ), ExtResource( 40 ) ]
respawn_sounds = [ ExtResource( 39 ) ]
win_sounds = [ ExtResource( 35 ) ]
start_sounds = [ ExtResource( 34 ) ]

[node name="change_role" type="OptionButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -31.0
margin_top = -20.0
margin_right = 31.0
button_mask = 3
text = "ROLE"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HUD/Panel/cancel_button" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="HUD/Panel/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="died" from="health" to="sounds" method="_on_health_died"]
[connection signal="healed" from="health" to="sounds" method="_on_health_healed"]
[connection signal="hurt" from="health" to="sounds" method="_on_health_hurt"]
[connection signal="respawned" from="health" to="sounds" method="_on_health_respawned"]
[connection signal="counting" from="score" to="sounds" method="_on_score_counting"]
[connection signal="lost" from="score" to="sounds" method="_on_score_lost"]
[connection signal="scored" from="score" to="sounds" method="_on_score_scored"]
[connection signal="won" from="score" to="sounds" method="_on_score_won"]
